--- a/AbarrotesAngular/src/app/create/create.component.html
+++ b/AbarrotesAngular/src/app/create/create.component.html
@@ -27,19 +27,14 @@
 
   <div class="form-row">
     <div class="form-group col-md-3">
-      <label for="presentacion">Presentación</label>
-      <select id="presentacion" [(ngModel)]="producto.presentacion_id" class="form-control">
-        <option value="" disabled [value]="producto.presentacion_id">Elegir...</option>
-        <option *ngFor="let presentacion of hack(presentaciones)" [value]="presentacion.id">
-          {{presentacion.presentacion}}
-        </option>
-      </select>
+      <app-presentacion [producto]="producto">
+      </app-presentacion>
     </div>
     <div class="form-group col-md-3">
       <label for="iUmedida">Unidad de medida</label>
       <select id="iUmedida" [(ngModel)]="producto.unidadMedida_id" class="form-control">
-        <option value="" disabled [value]="producto.unidadMedida_id">Elegir...</option>
-        <option *ngFor="let uMedida of hack(unidadesMedida)" [value]="uMedida.id">
+        <option value="" disabled [value]="0">Elegir...</option>
+        <option *ngFor="let uMedida of unidadesMedida" [value]="uMedida.id">
           {{uMedida.unidadMedida}}
         </option>
       </select>
